tests/machine/x/c/string_contains.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/string_contains.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/string_contains.c:7:19: error: request for member ‘contains’ in something not a structure or union
    7 |   printf("%d\n", s.contains("cat"));
      |                   ^
/workspace/mochi/tests/machine/x/c/string_contains.c:8:19: error: request for member ‘contains’ in something not a structure or union
    8 |   printf("%d\n", s.contains("dog"));
      |                   ^

   1: #include <stdio.h>
